--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <header>
       <nav id="header-nav" class="navbar navbar-default">
         <div class="container">
+
           <div class="navbar-header">
             <a href="index.html" class="pull-left visible-md visible-lg">
               <div id="logo-img" alt="Logo image"></div>
@@ -30,10 +31,39 @@
               </p>
             </div>
 
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+          </div> <!-- fin de .navbar-header -->
 
-          </div>
-        </div>
-      </nav>
+          <div id="collapsable-nav" class="collapse navbar-collapse">
+            <ul id="nav-list" class="nav navbar-nav navbar-right">
+             <li>
+               <a href="menu-categories.html">
+                 <span class="glyphicon glyphicon-cutlery"></span><br class="hidden-xs"> Menu</a>
+             </li>
+             <li>
+               <a href="#">
+                 <span class="glyphicon glyphicon-info-sign"></span><br class="hidden-xs"> About</a>
+             </li>
+             <li>
+               <a href="#">
+                 <span class="glyphicon glyphicon-certificate"></span><br class="hidden-xs"> Awards</a>
+             </li>
+             <li id="phone" class="hidden-xs">
+               <a href="tel:410-602-5008">
+                 <span>410-602-5008</span>
+                </a>
+                <div>* We Deliver</div>
+             </li>
+           </ul> <!-- end of #nav-list -->
+         </div> <!-- end of #collapsable-nav -->
+
+        </div> <!-- end of .container -->
+      </nav> <!-- end of #header-nav -->
     </header>
   
   
