--- a/index.html
+++ b/index.html
@@ -65,6 +65,27 @@
         </div> <!-- end of .container -->
       </nav> <!-- end of #header-nav -->
     </header>
+
+    <!-- Mise en place du numéro + "we deliver" en mode xs -->
+
+    <div id="call-btn" class="visible-xs">
+      <a class="btn" href="tel:410-602-5008">
+      <span class="glyphicon glyphicon-earphone"></span>
+      410-602-5008
+      </a>
+    </div>
+
+    <div id="xs-deliver" class="text-center visible-xs">* We Deliver</div>
+    
+    <!-- Affichage de l'image dite Jumbotron en langage Boostrap -->
+
+    <div id="main-content" class="container">
+      <div class="jumbotron">
+        <img src="images/jumbotron_768.jpg" alt="Picture of restaurant" class="img-responsive visible-xs"> <!-- img-responsive est une indication Boostrap qui dit que la taille de l'image va être modifiée en fonction de la taille de l'écran ... pas vraiment faisable en "background image"-->
+        <!-- Quant à visible-xs, cela indique que cette image ne sera visible qu'à cette taille (xs) d'affichage -->
+      </div>
+    </div>
+ 
   
   
   
