Coding footer part 1

--- a/index.html
+++ b/index.html
@@ -96,7 +96,6 @@
           <a href="single-category.html"><div id="specials-tile"><span>specials</span></div></a>
         </div>
         <div class="col-md-4 col-sm-12 col-xs-12">
-
           <!-- pour la source de la carte, aller sur Google map et chercher l'adresse du lieu.
           Cliquer sur le menu sandwich situé à gauche de la zone de saisie/recherche... dans le menu déroulant, choisir "share or embed map"... en FR : "partager ou intégrer la carte.
           Copier le "lien à partager" = celui sur a juste ci-dessous, puis cliquer dans l'onglet «Intégrer une carte», récupérer tout le code iframe = celui qui est ci-dessous, dans la div avec l'ID "map-tile". Ne pas oublier de modifier la width et l'height en fontion de ce qui est indiqué dans le CSS là où est stylisée ((#menu-tile, #specials-tile, #map-tile)) -->
@@ -105,12 +104,39 @@
               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3084.675372390488!2d-76.71386218529199!3d39.3635874269356!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c81a14e7817803%3A0xab20a0e99daa17ea!2sDavid+Chu&#39;s+China+Bistro!5e0!3m2!1sen!2sus!4v1452824864156" width="100%" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
               <span>map</span>
             </div>
-  
           </a>
         </div>
-      </div>
+      </div> <!-- end of #home-tiles -->
+    </div> <!-- end of #main-content -->
 
-    </div>
+
+
+    
+    <footer class="panel-footer">
+      <div class="container">
+        <div class="row">
+          <section id="hours" class="col-sm-4">
+            <span>Hours:</span><br>
+            Sun-Thurs: 11:15am - 10:00pm<br>
+            Fri: 11:15am - 2:30pm<br>
+            Saturday Closed
+            <hr class="visible-xs"> <!-- ligne visible que pour des xs ou plus petit, pour séparer les 3 sections une fois qu'elle se seront stackées les unes au dessus des autres -->
+          </section>
+          <section id="address" class="col-sm-4">
+            <span>Address:</span><br>
+            7105 Reisterstown Road<br>
+            Baltimore, MD 21215
+            <p>* Delivery area within 3-4 miles, with minimum order of $20 plus $3 charge for all deliveries.</p>
+            <hr class="visible-xs">
+          </section>
+          <section id="testimonials" class="col-sm-4">
+            <p>"The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!"</p>
+            <p>"Amazing food! Great service! Couldn't ask for more! I'll be back again and again!"</p>
+          </section>
+        </div>
+        <div class="text-center">&copy; Copyright David Chu's China Bistro 2024</div>
+      </div>
+    </footer>
  
   
   
