code single menu category page

--- a/single-category.html
+++ b/single-category.html
@@ -102,18 +102,42 @@
           <div class="row"> <!-- Obligé d'avoir un autre row pour subdiviser image à gauche et texte de description à droite -->
             <div class="col-sm-5"> <!-- photo moins large que texte de description (sur 7 colonnes) -->
               <div class="menu-item-photo">
-                <div>D01</div> <!-- code venant du menu du restaurant -->
+                <div>D01</div> <!-- code menu venant du menu du restaurant -->
                 <img class="img-responsive" width="250" height="150" src="images/menu/B/B-1.jpg" alt="Item"> <!-- à nouveau on utilise la classe img-responsive de Boostrap pour permettre à l'image de stretch en fontion de la taille de la fenêtre -->
               </div>
               <div class="menu-item-price">$10.95<span> (pint)</span> $14.95 <span>(quart)</span></div>
             </div>
             <div class="menu-item-description col-sm-7"> <!-- plus grand que photo : sur 5 colonnes -->
               <h3 class="menu-item-title">Veal with Mixed Vegetables</h3>
-              <p class="menu-item-details">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque inventore esse minima incidunt impedit. Asperiores, voluptatem. Sint aspernatur provident, rem odio dolorem eaque voluptatibus modi reprehenderit minima, itaque cupiditate totam.Asperiores, voluptatem. Sint aspernatur provident, rem odio dolorem eaque voluptatibus modi reprehenderit minima, itaque cupiditate totam.Asperiores, voluptatem. Sint aspernatur provident, rem odio dolorem eaque voluptatibus modi reprehenderit minima, itaque cupiditate totam.</p>
+              <p class="menu-item-details">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque inventore esse minima incidunt impedit. Asperiores, voluptatem. Sint aspernatur provident, rem odio dolorem eaque voluptatibus modi reprehenderit minima, itaque cupiditate totam.Asperiores, voluptatem.</p>
             </div>
           </div>
           <hr class="visible-xs"> <!-- usage de cette classe Bootstrap pour avoir une ligne qui ne sera visible que sur petits écrans, quand tout est stacké les uns au-dessus des autres -->
         </div>
+
+        <div class="menu-item-tile col-md-6">
+          <div class="row"> <!-- Obligé d'avoir un autre row pour subdiviser image à gauche et texte de description à droite -->
+            <div class="col-sm-5"> <!-- photo moins large que texte de description (sur 7 colonnes) -->
+              <div class="menu-item-photo">
+                <div>D02</div> <!-- code venant du menu du restaurant -->
+                <img class="img-responsive" width="250" height="150" src="images/menu/B/B-1.jpg" alt="Item"> <!-- à nouveau on utilise la classe img-responsive de Boostrap pour permettre à l'image de stretch en fontion de la taille de la fenêtre -->
+              </div>
+              <div class="menu-item-price">$10.95<span> (pint)</span> $14.95 <span>(quart)</span></div>
+            </div>
+            <div class="menu-item-description col-sm-7"> <!-- plus grand que photo : sur 5 colonnes -->
+              <h3 class="menu-item-title">Veal with Mixed Vegetables</h3>
+              <p class="menu-item-details">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque inventore esse minima incidunt impedit. Asperiores, voluptatem. Sint aspernatur provident, rem odio dolorem eaque voluptatibus modi reprehenderit minima, itaque cupiditate totam.Asperiores, voluptatem.</p>
+            </div>
+          </div>
+          <hr class="visible-xs"> <!-- usage de cette classe Bootstrap pour avoir une ligne qui ne sera visible que sur petits écrans, quand tout est stacké les uns au-dessus des autres -->
+        </div>
+
+
+
+
+
+
+
       </section>
       
 
