--- a/menu-categories.html
+++ b/menu-categories.html
@@ -42,24 +42,31 @@
 
           <div id="collapsable-nav" class="collapse navbar-collapse">
             <ul id="nav-list" class="nav navbar-nav navbar-right">
-             <li class="active"> <!-- classe de Boostrap qui mime le hover -->
-               <a href="menu-categories.html">
-                 <span class="glyphicon glyphicon-cutlery"></span><br class="hidden-xs"> Menu</a>
-             </li>
-             <li>
-               <a href="#">
-                 <span class="glyphicon glyphicon-info-sign"></span><br class="hidden-xs"> About</a>
-             </li>
-             <li>
-               <a href="#">
-                 <span class="glyphicon glyphicon-certificate"></span><br class="hidden-xs"> Awards</a>
-             </li>
-             <li id="phone" class="hidden-xs">
-               <a href="tel:410-602-5008">
-                 <span>410-602-5008</span>
+              <!-- Ajout d'un élément permettant de retourner à la home page, UNIQUEMENT dans le dropdown menu
+              Pour cela on va ajouter un élément ici, mais avec indication qu'il ne sera visible (actif),
+              que dans le mode mobile (visible-xs) -->
+              <li class="visible-xs"> <!-- on a enlevé le "active" ici, puisqu'on est plus sur la home page -->
+                <a href="index.html">
+                  <span class="glyphicon glyphicon-home"></span> Home</a>
+              </li>
+              <li class="active"> <!-- classe de Boostrap qui mime le hover -->
+                <a href="menu-categories.html">
+                  <span class="glyphicon glyphicon-cutlery"></span><br class="hidden-xs"> Menu</a>
+              </li>
+              <li>
+                <a href="#">
+                  <span class="glyphicon glyphicon-info-sign"></span><br class="hidden-xs"> About</a>
+              </li>
+              <li>
+                <a href="#">
+                  <span class="glyphicon glyphicon-certificate"></span><br class="hidden-xs"> Awards</a>
+              </li>
+              <li id="phone" class="hidden-xs">
+                <a href="tel:410-602-5008">
+                  <span>410-602-5008</span>
                 </a>
                 <div>* We Deliver</div>
-             </li>
+              </li>
            </ul> <!-- end of #nav-list -->
          </div> <!-- end of #collapsable-nav -->
 
